fix: misc fixes

--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbControl.xaml
@@ -24,10 +24,9 @@
             <local:BreadcrumbTemplateSelector.LastItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <Button Margin="0,0,5,0"
-                                Content="{Binding}"
-                                Style="{StaticResource TextButtonStyle}"
-                                IsEnabled="False" />
+                        <TextBlock Margin="0,0,5,0"
+                                   Text="{Binding}"
+                                   VerticalAlignment="Center"/>
                     </StackPanel>
                 </DataTemplate>
             </local:BreadcrumbTemplateSelector.LastItemTemplate>
