--- a/UI/Navigation/src/Navigation/Presentation/ContentControlNavigation/CControlNavigationPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ContentControlNavigation/CControlNavigationPage.xaml
@@ -14,7 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="ContentControl Navigation Page" />
+		<utu:NavigationBar Content="Content Control Navigation" />
 
 		<Grid Grid.Row="1">
 			<Grid.ColumnDefinitions>
