--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/FlyoutDrawerPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/FlyoutDrawerPage.xaml
@@ -21,7 +21,13 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Spacing="16">
+                <Image Width="150"
+                       Height="150"
+                       Margin="12"
+                       HorizontalAlignment="Center"
+                       Source="ms-appx:///Assets/logo.png" />
                 <Button Content="Open Flyout"
+                        HorizontalAlignment="Center"
                         uen:Navigation.Request="NavFlyout" />
             </StackPanel>
         </Grid>
