--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/NavFlyout.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/NavFlyout.xaml
@@ -12,11 +12,11 @@
 
     <StackPanel>
         <TextBlock Text="Flyout" />
-        <Button Content="Button 1"
+        <Button Content="First Page"
                 uen:Navigation.Request="First" />
-        <Button Content="Button 2"
+        <Button Content="Second Page"
                 uen:Navigation.Request="Second" />
-        <Button Content="Button 3"
+        <Button Content="Third Page"
                 uen:Navigation.Request="Third" />
     </StackPanel>
 </Flyout>
