--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/SecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/SecondPage.xaml
@@ -23,5 +23,18 @@
                 </AppBarButton>
             </utu:NavigationBar.MainCommand>
         </utu:NavigationBar>
+        <StackPanel Grid.Row="1"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Spacing="16">
+            <Image Width="150"
+                   Height="150"
+                   Margin="12"
+                   HorizontalAlignment="Center"
+                   Source="ms-appx:///Assets/logo.png" />
+            <TextBlock Text="Second Page"
+                       HorizontalAlignment="Center"
+                       FontSize="40" />
+        </StackPanel>
     </Grid>
 </Page>
