--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalContentDialog.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalContentDialog.xaml
@@ -3,7 +3,7 @@
 			   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			   xmlns:local="using:Navigation.Presentation"
 			   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			   Title="Modal"
+			   Title="Content Dialog"
 			   PrimaryButtonText="Ok"
 			   SecondaryButtonText="Cancel"
 			   Style="{ThemeResource DefaultContentDialogStyle}">
@@ -11,6 +11,6 @@
 		<TextBlock HorizontalAlignment="Center"
 				   VerticalAlignment="Center"
 				   FontSize="32"
-				   Text="Dialog Navigation" />
+				   Text="Navigation" />
 	</Grid>
 </ContentDialog>
