--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
@@ -14,7 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Show Dialog" />
+		<utu:NavigationBar Content="Display Dialog" />
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
@@ -25,7 +25,7 @@
 				   Margin="12"
 				   HorizontalAlignment="Center"
 				   Source="ms-appx:///Assets/logo.png" />
-
+ 
 			<!--  Show Flyout  -->
 			<Button Command="{Binding ShowFlyoutCommand}" Content="Show flyout" />
 
