--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogSecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogSecondPage.xaml
@@ -40,6 +40,8 @@
 					   FontSize="32"
 					   Text="Dialog Navigation" />
 
-		</StackPanel>
+            <TextBlock Text="This is a flyout that takes the full screen." />
+
+        </StackPanel>
 	</Grid>
 </Page>
