--- a/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarItem3.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarItem3.xaml
@@ -9,9 +9,13 @@
 			 mc:Ignorable="d">
 
 	<Grid>
-		<TextBlock HorizontalAlignment="Center"
+        <TextBlock HorizontalAlignment="Center"
 				   VerticalAlignment="Center"
 				   FontSize="24"
-				   Text="Tab Three" />
-	</Grid>
+				   Text="Tab Three (User Control)" />
+        <TextBlock HorizontalAlignment="Center"
+                   VerticalAlignment="Bottom"
+                   FontSize="16"
+                   Text="Content for Tab 3 is a user control." />
+    </Grid>
 </UserControl>
