--- a/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
@@ -17,7 +17,7 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="TabBar Navigation Page" Style="{StaticResource MaterialNavigationBarStyle}">
+		<utu:NavigationBar Content="TabBar Navigation" Style="{StaticResource MaterialNavigationBarStyle}">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton Foreground="{ThemeResource OnSurfaceInverseBrush}">
 					<AppBarButton.Icon>
@@ -49,9 +49,9 @@
 					VerticalAlignment="Bottom"
 					uen:Region.Attached="True">
 			<utu:TabBar.Items>
-				<utu:TabBarItem uen:Region.Name="TBOne" Content="One" />
-				<utu:TabBarItem uen:Region.Name="TBTwo" Content="Two" />
-				<utu:TabBarItem uen:Region.Name="TBThree" Content="Three" />
+				<utu:TabBarItem uen:Region.Name="TBOne" Content="Tab One" />
+				<utu:TabBarItem uen:Region.Name="TBTwo" Content="Tab Two" />
+				<utu:TabBarItem uen:Region.Name="TBThree" Content="Tab Three (User Control)" />
 			</utu:TabBar.Items>
 		</utu:TabBar>
 	</Grid>
