--- a/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/FirstTabBarItemWithDataPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/FirstTabBarItemWithDataPage.xaml
@@ -15,7 +15,11 @@
 		<TextBlock HorizontalAlignment="Center"
 				   Style="{StaticResource TitleLarge}"
 				   Text="First Tab" />
-		<StackPanel Grid.Row="1"
+        <TextBlock Text="Data persists between both the tabs."
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Margin="40"/>
+        <StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
 					Orientation="Horizontal"
 					Spacing="4">
