--- a/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/TabBarWithDataPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/TabBarWithDataPage.xaml
@@ -17,7 +17,7 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="TabBar Navigation Page" Style="{StaticResource MaterialNavigationBarStyle}">
+		<utu:NavigationBar Content="TabBar Navigation with Data" Style="{StaticResource MaterialNavigationBarStyle}">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton Foreground="{ThemeResource OnSurfaceInverseBrush}">
 					<AppBarButton.Icon>
