--- a/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/BreadcrumbNavigation/BreadcrumbNavigation.xaml
@@ -14,7 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Page Navigation" />
+		<utu:NavigationBar Content="Breadcrumb Navigation" />
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
