--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
@@ -48,7 +48,8 @@
 				<TextBox Width="400"
 						 PlaceholderText="Entity Name"
 						 Text="{Binding Entity.Name, Mode=TwoWay}" />
-				<StackPanel Orientation="Horizontal" Spacing="8">
+                <TextBlock Text="Click on one of the buttons below to navigate back and see the updated value." />
+                <StackPanel Orientation="Horizontal" Spacing="8">
 					<Button uen:Navigation.Data="{Binding Entity, Mode=TwoWay}"
 							uen:Navigation.Request="-"
 							Content="Go Back" />
