--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample/MainPage.xaml
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample/MainPage.xaml
@@ -1,10 +1,10 @@
 ﻿<Page x:Class="AutoSuggestSample.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:AutoSuggestSample">
+      xmlns:local="using:AutoSuggestSample"
+      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
   
-  <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-        Margin="20,40">
+  <Grid Margin="20,40">
     <StackPanel Margin="4">
       <TextBlock Text="This sample demonstrates the use of the AutoSuggestBox Control"
                  Margin="0,0,0,30"
