fix: NavigationBar mobile

--- a/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
@@ -15,7 +15,8 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="Message Dialog" />
+		<utu:NavigationBar Content="Message Dialog"
+							Padding="60,0,0,0" />
 
 		<TextBlock x:Name="MessageDialogResultText"
 					Grid.Row="1" />
