--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageOne.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageOne.xaml
@@ -15,7 +15,10 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <utu:NavigationBar Content="Complex Flyout One" Background="{ThemeResource PrimaryBrush}" Foreground="{ThemeResource OnPrimaryBrush}">
+        <utu:NavigationBar Content="Complex Flyout One"
+                           Background="{ThemeResource PrimaryBrush}"
+                           Foreground="{ThemeResource OnPrimaryBrush}"
+                           Padding="60,0,0,0">
             <utu:NavigationBar.MainCommand>
                 <AppBarButton Foreground="{ThemeResource OnPrimaryBrush}">
                     <AppBarButton.Icon>
