--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageTwo.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageTwo.xaml
@@ -17,7 +17,8 @@
         </Grid.RowDefinitions>
         <utu:NavigationBar Content="Complex Flyout Two"
                            Background="{ThemeResource PrimaryBrush}"
-                           Foreground="{ThemeResource OnPrimaryBrush}">
+                           Foreground="{ThemeResource OnPrimaryBrush}"
+                           Padding="60,0,0,0">
             <utu:NavigationBar.MainCommand>
                 <AppBarButton Foreground="{ThemeResource OnPrimaryBrush}">
                     <AppBarButton.Icon>
