--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
@@ -14,7 +14,8 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Page Navigation" />
+		<utu:NavigationBar Content="Page Navigation"
+							Padding="60,0,0,0" />
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
