--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/SamplePage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/SamplePage.xaml
@@ -15,7 +15,8 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="Sample Page">
+		<utu:NavigationBar Content="Sample Page"
+							Padding="60,0,0,0">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
