--- a/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
@@ -17,7 +17,9 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="TabBar Navigation" Style="{StaticResource MaterialNavigationBarStyle}">
+		<utu:NavigationBar Content="TabBar Navigation"
+							Style="{StaticResource MaterialNavigationBarStyle}"
+							Padding="60,0,0,0">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton Foreground="{ThemeResource OnSurfaceInverseBrush}">
 					<AppBarButton.Icon>
