--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/FlyoutDrawerPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/FlyoutDrawerPage.xaml
@@ -15,7 +15,8 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <utu:NavigationBar Content="Flyout Drawer Page" />
+            <utu:NavigationBar Content="Flyout Drawer Page"
+                               Padding="60,0,0,0" />
 
             <StackPanel Grid.Row="1"
                         HorizontalAlignment="Center"
