--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/ThirdPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/ThirdPage.xaml
@@ -14,7 +14,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <utu:NavigationBar Content="Third Page">
+        <utu:NavigationBar Content="Third Page"
+                           Padding="60,0,0,0">
             <utu:NavigationBar.MainCommand>
                 <AppBarButton>
                     <AppBarButton.Icon>
