--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
@@ -14,7 +14,8 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Sample Page">
+		<utu:NavigationBar Content="Sample Page"
+							Padding="60,0,0,0">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
