chore: fix indentation

--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/SamplePage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/SamplePage.xaml
@@ -15,8 +15,7 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="Sample Page"
-							Padding="60,0,0,0">
+		<utu:NavigationBar Padding="60,0,0,0" Content="Sample Page">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
@@ -35,7 +34,6 @@
 				   Margin="12"
 				   HorizontalAlignment="Center"
 				   Source="ms-appx:///Assets/logo.png" />
-
 			<Button uen:Navigation.Request="-" Content="Go Back" />
 		</StackPanel>
 
