--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
@@ -14,8 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Sample Page"
-							Padding="60,0,0,0">
+		<utu:NavigationBar Padding="60,0,0,0" Content="Sample Page">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
@@ -58,6 +57,5 @@
 				</StackPanel>
 			</StackPanel>
 		</StackPanel>
-
 	</Grid>
 </Page>
