--- a/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/TabBarWithDataPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/TabBarWithDataPage.xaml
@@ -17,9 +17,9 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="TabBar Navigation with Data"
-							Style="{StaticResource MaterialNavigationBarStyle}"
-							Padding="60,0,0,0">
+		<utu:NavigationBar Padding="60,0,0,0"
+						   Content="TabBar Navigation with Data"
+						   Style="{StaticResource MaterialNavigationBarStyle}">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton Foreground="{ThemeResource OnSurfaceInverseBrush}">
 					<AppBarButton.Icon>
