--- a/UI/Navigation/src/Navigation/Presentation/ContentControlNavigation/CControlNavigationPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ContentControlNavigation/CControlNavigationPage.xaml
@@ -14,8 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Content Control Navigation"
-							Padding="60,0,0,0" />
+		<utu:NavigationBar Padding="60,0,0,0" Content="Content Control Navigation" />
 
 		<Grid Grid.Row="1">
 			<Grid.ColumnDefinitions>
