--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -58,8 +58,7 @@
 					</muxc:NavigationViewItem.Icon>
 				</muxc:NavigationViewItem>
 
-				<muxc:NavigationViewItem uen:Region.Name="FlyoutDrawer"
-										Content="Flyout Drawer">
+				<muxc:NavigationViewItem uen:Region.Name="FlyoutDrawer" Content="Flyout Drawer">
 					<muxc:NavigationViewItem.Icon>
 						<SymbolIcon Symbol="NewWindow" />
 					</muxc:NavigationViewItem.Icon>
