--- a/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
@@ -15,11 +15,9 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="Message Dialog"
-							Padding="60,0,0,0" />
+		<utu:NavigationBar Padding="60,0,0,0" Content="Message Dialog" />
 
-		<TextBlock x:Name="MessageDialogResultText"
-					Grid.Row="1" />
+		<TextBlock x:Name="MessageDialogResultText" Grid.Row="1" />
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
@@ -38,8 +36,7 @@
 			<Button Command="{Binding ShowSimpleDialogCommand}" Content="Show Message Dialog with code behind" />
 
 			<!--  Button to show Message Dialog that disappears aftrer 2 secs  -->
-			<Button Content="MessageDialog Codebehind (cancel after 2s)"
-					Command="{Binding MessageDialogCodebehindCancelCommand}" />
+			<Button Command="{Binding MessageDialogCodebehindCancelCommand}" Content="MessageDialog Codebehind (cancel after 2s)" />
 
 		</StackPanel>
 	</Grid>
