--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPage.xaml
@@ -1,19 +1,18 @@
 ﻿<Flyout x:Class="Navigation.Presentation.ComplexFlyoutPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:Navigation.Presentation"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:uen="using:Uno.Extensions.Navigation.UI"
-      xmlns:utu="using:Uno.Toolkit.UI"
-      mc:Ignorable="d">
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:local="using:Navigation.Presentation"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:uen="using:Uno.Extensions.Navigation.UI"
+		xmlns:utu="using:Uno.Toolkit.UI"
+		mc:Ignorable="d">
 
-    <Grid Height="1000"
-          Width="500">
-        <Frame uen:Region.Attached="True"
-               HorizontalAlignment="Stretch"
-               VerticalAlignment="Stretch"
-               HorizontalContentAlignment="Stretch"
-               VerticalContentAlignment="Stretch" />
-    </Grid>
+	<Grid Width="500" Height="1000">
+		<Frame HorizontalAlignment="Stretch"
+			   VerticalAlignment="Stretch"
+			   HorizontalContentAlignment="Stretch"
+			   VerticalContentAlignment="Stretch"
+			   uen:Region.Attached="True" />
+	</Grid>
 </Flyout>
