--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageTwo.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageTwo.xaml
@@ -1,41 +1,41 @@
 ﻿<Page x:Class="Navigation.Presentation.ComplexFlyoutPageTwo"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:Navigation.Presentation"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:uen="using:Uno.Extensions.Navigation.UI"
-      xmlns:utu="using:Uno.Toolkit.UI"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-      mc:Ignorable="d">
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:local="using:Navigation.Presentation"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  mc:Ignorable="d">
 
-    <Grid utu:SafeArea.Insets="VisibleBounds">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <utu:NavigationBar Content="Complex Flyout Two"
-                           Background="{ThemeResource PrimaryBrush}"
-                           Foreground="{ThemeResource OnPrimaryBrush}"
-                           Padding="60,0,0,0">
-            <utu:NavigationBar.MainCommand>
-                <AppBarButton Foreground="{ThemeResource OnPrimaryBrush}">
-                    <AppBarButton.Icon>
-                        <BitmapIcon UriSource="ms-appx:///Assets/Images/back.png" />
-                    </AppBarButton.Icon>
-                </AppBarButton>
-            </utu:NavigationBar.MainCommand>
-        </utu:NavigationBar>
+	<Grid utu:SafeArea.Insets="VisibleBounds">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<utu:NavigationBar Padding="60,0,0,0"
+						   Background="{ThemeResource PrimaryBrush}"
+						   Content="Complex Flyout Two"
+						   Foreground="{ThemeResource OnPrimaryBrush}">
+			<utu:NavigationBar.MainCommand>
+				<AppBarButton Foreground="{ThemeResource OnPrimaryBrush}">
+					<AppBarButton.Icon>
+						<BitmapIcon UriSource="ms-appx:///Assets/Images/back.png" />
+					</AppBarButton.Icon>
+				</AppBarButton>
+			</utu:NavigationBar.MainCommand>
+		</utu:NavigationBar>
 
 
-        <StackPanel Grid.Row="1"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Spacing="16">
-            <Button AutomationProperties.AutomationId="ComplexFlyoutSecondPageCloseButton"
-                    Content="Close flyout"
-                    Command="{Binding CloseCommand}" />
-        </StackPanel>
-    </Grid>
+		<StackPanel Grid.Row="1"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center"
+					Spacing="16">
+			<Button AutomationProperties.AutomationId="ComplexFlyoutSecondPageCloseButton"
+					Command="{Binding CloseCommand}"
+					Content="Close flyout" />
+		</StackPanel>
+	</Grid>
 </Page>
