--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
@@ -14,8 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Display Dialog"
-							Padding="60,0,0,0" />
+		<utu:NavigationBar Padding="60,0,0,0" Content="Display Dialog" />
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
@@ -26,7 +25,7 @@
 				   Margin="12"
 				   HorizontalAlignment="Center"
 				   Source="ms-appx:///Assets/logo.png" />
- 
+
 			<!--  Show Flyout  -->
 			<Button Command="{Binding ShowFlyoutCommand}" Content="Show flyout" />
 
@@ -40,12 +39,12 @@
 			<Button uen:Navigation.Request="!ModalContentDialog" Content="Show Content Dialog with XAML" />
 
 			<!--  Show Disappearing Flyout  -->
-			<Button Content="Flyout requesting data with cancellation (2s)"
-					Command="{Binding FlyoutRequestingDataWithCancelCommand}" />
+			<Button Command="{Binding FlyoutRequestingDataWithCancelCommand}" Content="Flyout requesting data with cancellation (2s)" />
 
 			<TextBlock Text="{Binding FlyoutData.Id}" />
-			<Button uen:Navigation.Request="!ComplexFlyout"
-					uen:Navigation.Data="{Binding FlyoutData, Mode=TwoWay}"
+
+			<Button uen:Navigation.Data="{Binding FlyoutData, Mode=TwoWay}"
+					uen:Navigation.Request="!ComplexFlyout"
 					Content="Complex Flyout from Xaml" />
 		</StackPanel>
 	</Grid>
