--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
@@ -14,8 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Page Navigation"
-							Padding="60,0,0,0" />
+		<utu:NavigationBar Padding="60,0,0,0" Content="Page Navigation" />
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
@@ -32,7 +31,6 @@
 
 			<!--  Using Navigation via code behind  -->
 			<Button Command="{Binding NavigateCommand}" Content="Navigate via code behind" />
-
 		</StackPanel>
 	</Grid>
 </Page>
