--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueMainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueMainPage.xaml
@@ -14,8 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Content="Request a Value"
-							Padding="60,0,0,0">
+		<utu:NavigationBar Padding="60,0,0,0" Content="Request a Value">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
