--- a/UI/Navigation/src/Navigation/Presentation/ToFromQuery/ToFromQueryPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ToFromQuery/ToFromQueryPage.xaml
@@ -14,8 +14,7 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Content="ToFromQuery Page"
-							Padding="60,0,0,0">
+		<utu:NavigationBar Padding="60,0,0,0" Content="ToFromQuery Page">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
