--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/FlyoutDrawerPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/FlyoutDrawerPage.xaml
@@ -15,7 +15,7 @@
 				<RowDefinition Height="Auto" />
 				<RowDefinition />
 			</Grid.RowDefinitions>
-			<utu:NavigationBar Padding="60,0,0,0" Content="Flyout Drawer Page" />
+			<utu:NavigationBar Content="Flyout Drawer Page" />
 
 			<StackPanel Grid.Row="1"
 						HorizontalAlignment="Center"
