--- a/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MessageDialog/MessageDialogPage.xaml
@@ -15,7 +15,7 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Padding="60,0,0,0" Content="Message Dialog" />
+		<utu:NavigationBar Content="Message Dialog" />
 
 		<TextBlock x:Name="MessageDialogResultText" Grid.Row="1" />
 
