--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageTwo.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageTwo.xaml
@@ -15,8 +15,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Padding="60,0,0,0"
-						   Background="{ThemeResource PrimaryBrush}"
+		<utu:NavigationBar Background="{ThemeResource PrimaryBrush}"
 						   Content="Complex Flyout Two"
 						   Foreground="{ThemeResource OnPrimaryBrush}">
 			<utu:NavigationBar.MainCommand>
