--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
@@ -14,7 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Padding="60,0,0,0" Content="Display Dialog" />
+		<utu:NavigationBar Content="Display Dialog" />
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
