--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/SecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/SecondPage.xaml
@@ -14,7 +14,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<utu:NavigationBar Padding="60,0,0,0" Content="Second Page">
+		<utu:NavigationBar Content="Second Page">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
