--- a/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/MainPage.xaml
@@ -10,10 +10,45 @@
 
 	<Grid utu:SafeArea.Insets="VisibleBounds">
 
-		<muxc:NavigationView uen:Region.Attached="True"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+
+        <Button x:Name="NavViewToggleButton"
+                Grid.Row="0"
+                Grid.Column="0"
+                HorizontalAlignment="Left"
+                Click="NavViewToggleButton_Click"
+                Canvas.ZIndex="10"
+                Margin="10,0,0,0"
+                Style="{StaticResource PaneToggleButtonStyle}" />
+
+        <TextBlock Text="Navigation Samples"
+                   Grid.Row="0"
+                   Grid.Column="1"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontSize="24"
+                   FontWeight="Bold"
+                   Canvas.ZIndex="10"
+                   Margin="0,0,10,0" />
+
+        <muxc:NavigationView x:Name="NavigationViewControl"
+                             Grid.Row="1"
+                             Grid.ColumnSpan="3"
+                             uen:Region.Attached="True"
 							 IsBackButtonVisible="Collapsed"
 							 IsPaneOpen="True"
-							 IsSettingsVisible="False">
+							 IsSettingsVisible="False"
+                             IsPaneToggleButtonVisible="False">
+            
 			<muxc:NavigationView.MenuItems>
 
 				<muxc:NavigationViewItem uen:Region.Name="./PageNavigation" Content="Page Navigation">
