--- a/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
@@ -17,8 +17,7 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 
-		<utu:NavigationBar Padding="60,0,0,0"
-						   Content="TabBar Navigation"
+		<utu:NavigationBar Content="TabBar Navigation"
 						   Style="{StaticResource MaterialNavigationBarStyle}">
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton Foreground="{ThemeResource OnSurfaceInverseBrush}">
