fix: fixed indentation and icons

--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogSecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogSecondPage.xaml
@@ -19,7 +19,7 @@
 			<utu:NavigationBar.MainCommand>
 				<AppBarButton>
 					<AppBarButton.Icon>
-						<BitmapIcon UriSource="ms-appx:///Assets/Images/back.png" />
+						<BitmapIcon UriSource="ms-appx:///Assets/Images/close.png" />
 					</AppBarButton.Icon>
 				</AppBarButton>
 			</utu:NavigationBar.MainCommand>
