--- a/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/NavFlyout.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/FlyoutDrawer/NavFlyout.xaml
@@ -12,8 +12,11 @@
 
 	<StackPanel>
 		<TextBlock Text="Flyout" />
-		<Button uen:Navigation.Request="First" Content="First Page" />
-		<Button uen:Navigation.Request="Second" Content="Second Page" />
-		<Button uen:Navigation.Request="Third" Content="Third Page" />
+		<Button uen:Navigation.Request="First"
+				Content="First Page" />
+		<Button uen:Navigation.Request="Second"
+				Content="Second Page" />
+		<Button uen:Navigation.Request="Third"
+				Content="Third Page" />
 	</StackPanel>
 </Flyout>
