--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageOne.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ComplexFlyoutPageOne.xaml
@@ -40,7 +40,8 @@
 			<TextBlock Text="Click on one of the values below." />
 
 			<Border Background="Green">
-				<muxc:ItemsRepeater uen:Navigation.Request="-" ItemsSource="{Binding Items}">
+				<muxc:ItemsRepeater uen:Navigation.Request="-"
+									ItemsSource="{Binding Items}">
 					<muxc:ItemsRepeater.ItemTemplate>
 						<DataTemplate>
 							<Grid>
