--- a/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ModalDialog/ModalDialogPage.xaml
@@ -27,19 +27,24 @@
 				   Source="ms-appx:///Assets/logo.png" />
 
 			<!--  Show Flyout  -->
-			<Button Command="{Binding ShowFlyoutCommand}" Content="Show flyout" />
+			<Button Command="{Binding ShowFlyoutCommand}"
+					Content="Show flyout" />
 
 			<!--  Show Flyout with XAML  -->
-			<Button uen:Navigation.Request="!ModalDialogSecond" Content="Show Flyout with XAML" />
+			<Button uen:Navigation.Request="!ModalDialogSecond"
+					Content="Show Flyout with XAML" />
 
 			<!--  Show Content Dialog  -->
-			<Button Command="{Binding ShowContentDialogCommand}" Content="Show Content Dialog" />
+			<Button Command="{Binding ShowContentDialogCommand}"
+					Content="Show Content Dialog" />
 
 			<!--  Show Content Dialog with XAML  -->
-			<Button uen:Navigation.Request="!ModalContentDialog" Content="Show Content Dialog with XAML" />
+			<Button uen:Navigation.Request="!ModalContentDialog"
+					Content="Show Content Dialog with XAML" />
 
 			<!--  Show Disappearing Flyout  -->
-			<Button Command="{Binding FlyoutRequestingDataWithCancelCommand}" Content="Flyout requesting data with cancellation (2s)" />
+			<Button Command="{Binding FlyoutRequestingDataWithCancelCommand}"
+					Content="Flyout requesting data with cancellation (2s)" />
 
 			<TextBlock Text="{Binding FlyoutData.Id}" />
 
