--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/PageNavigation.xaml
@@ -27,10 +27,12 @@
 				   Source="ms-appx:///Assets/logo.png" />
 
 			<!--  The Navigation.Request attached property is used to navigate to the SamplePage  -->
-			<Button uen:Navigation.Request="Sample" Content="Navigate via XAML" />
+			<Button uen:Navigation.Request="Sample"
+					Content="Navigate via XAML" />
 
 			<!--  Using Navigation via code behind  -->
-			<Button Command="{Binding NavigateCommand}" Content="Navigate via code behind" />
+			<Button Command="{Binding NavigateCommand}"
+					Content="Navigate via code behind" />
 		</StackPanel>
 	</Grid>
 </Page>
