--- a/UI/Navigation/src/Navigation/Presentation/PageNavigation/SamplePage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/PageNavigation/SamplePage.xaml
@@ -34,7 +34,8 @@
 				   Margin="12"
 				   HorizontalAlignment="Center"
 				   Source="ms-appx:///Assets/logo.png" />
-			<Button uen:Navigation.Request="-" Content="Go Back" />
+			<Button uen:Navigation.Request="-"
+					Content="Go Back" />
 		</StackPanel>
 
 	</Grid>
