--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueMainPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueMainPage.xaml
@@ -34,7 +34,8 @@
 				   HorizontalAlignment="Center"
 				   Source="ms-appx:///Assets/logo.png" />
 
-			<TextBlock HorizontalAlignment="Center" Style="{StaticResource TitleLarge}">
+			<TextBlock HorizontalAlignment="Center"
+					   Style="{StaticResource TitleLarge}">
 				<Run Text="Entity name: " /><Run Text="{Binding Entity.Name}" />
 			</TextBlock>
 
