--- a/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarNavigation/TabBarNavigationPage.xaml
@@ -31,13 +31,15 @@
 		<Grid Grid.Row="1"
 			  uen:Region.Attached="True"
 			  uen:Region.Navigator="Visibility">
-			<Grid uen:Region.Name="TBOne" Visibility="Collapsed">
+			<Grid uen:Region.Name="TBOne"
+				  Visibility="Collapsed">
 				<TextBlock HorizontalAlignment="Center"
 						   VerticalAlignment="Center"
 						   FontSize="24"
 						   Text="Tab One" />
 			</Grid>
-			<Grid uen:Region.Name="TBTwo" Visibility="Collapsed">
+			<Grid uen:Region.Name="TBTwo"
+				  Visibility="Collapsed">
 				<TextBlock HorizontalAlignment="Center"
 						   VerticalAlignment="Center"
 						   FontSize="24"
@@ -50,9 +52,12 @@
 					VerticalAlignment="Bottom"
 					uen:Region.Attached="True">
 			<utu:TabBar.Items>
-				<utu:TabBarItem uen:Region.Name="TBOne" Content="Tab One" />
-				<utu:TabBarItem uen:Region.Name="TBTwo" Content="Tab Two" />
-				<utu:TabBarItem uen:Region.Name="TBThree" Content="Tab Three (User Control)" />
+				<utu:TabBarItem uen:Region.Name="TBOne"
+								Content="Tab One" />
+				<utu:TabBarItem uen:Region.Name="TBTwo"
+								Content="Tab Two" />
+				<utu:TabBarItem uen:Region.Name="TBThree"
+								Content="Tab Three (User Control)" />
 			</utu:TabBar.Items>
 		</utu:TabBar>
 	</Grid>
