--- a/UI/Navigation/src/Navigation/Presentation/ToFromQuery/ToFromQueryPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/ToFromQuery/ToFromQueryPage.xaml
@@ -34,11 +34,13 @@
 				   HorizontalAlignment="Center"
 				   Source="ms-appx:///Assets/logo.png" />
 
-			<TextBlock HorizontalAlignment="Center" Style="{StaticResource TitleLarge}">
+			<TextBlock HorizontalAlignment="Center"
+					   Style="{StaticResource TitleLarge}">
 				<Run Text="User Id: " /><Run Text="{Binding User.Id}" />
 			</TextBlock>
 
-			<TextBlock HorizontalAlignment="Center" Style="{StaticResource TitleLarge}">
+			<TextBlock HorizontalAlignment="Center"
+					   Style="{StaticResource TitleLarge}">
 				<Run Text="User name: " /><Run Text="{Binding User.Name}" />
 			</TextBlock>
 		</StackPanel>
