--- a/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/RequestValue/RequestValueSecondPage.xaml
@@ -28,32 +28,37 @@
 					HorizontalAlignment="Center"
 					VerticalAlignment="Center"
 					Spacing="16">
-			<TextBlock Style="{StaticResource TitleLarge}" Text="Choose from the List" />
+			<TextBlock Style="{StaticResource TitleLarge}"
+					   Text="Choose from the List" />
 			<ListView HorizontalAlignment="Center"
 					  VerticalAlignment="Center"
 					  uen:Navigation.Request="-"
 					  ItemsSource="{Binding Entities}">
 				<ListView.ItemTemplate>
 					<DataTemplate>
-						<StackPanel Padding="10" Orientation="Horizontal">
+						<StackPanel Padding="10"
+									Orientation="Horizontal">
 							<TextBlock Text="{Binding Name}" />
 						</StackPanel>
 					</DataTemplate>
 				</ListView.ItemTemplate>
 			</ListView>
 
-			<TextBlock Style="{StaticResource TitleLarge}" Text="Or type the Entity name:" />
+			<TextBlock Style="{StaticResource TitleLarge}"
+					   Text="Or type the Entity name:" />
 
 			<StackPanel Spacing="8">
 				<TextBox Width="400"
 						 PlaceholderText="Entity Name"
 						 Text="{Binding Entity.Name, Mode=TwoWay}" />
 				<TextBlock Text="Click on one of the buttons below to navigate back and see the updated value." />
-				<StackPanel Orientation="Horizontal" Spacing="8">
+				<StackPanel Orientation="Horizontal"
+							Spacing="8">
 					<Button uen:Navigation.Data="{Binding Entity, Mode=TwoWay}"
 							uen:Navigation.Request="-"
 							Content="Go Back" />
-					<Button Command="{Binding GoBackToViewCommand}" Content="Go Back (Code-Behind)" />
+					<Button Command="{Binding GoBackToViewCommand}"
+							Content="Go Back (Code-Behind)" />
 				</StackPanel>
 			</StackPanel>
 		</StackPanel>
