--- a/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/TabBarWithDataPage.xaml
+++ b/UI/Navigation/src/Navigation/Presentation/TabBarWithDataNavigation/TabBarWithDataPage.xaml
@@ -36,8 +36,10 @@
 					VerticalAlignment="Bottom"
 					uen:Region.Attached="True">
 			<utu:TabBar.Items>
-				<utu:TabBarItem Command="{Binding GoToFirstTabCommand}" Content="One" />
-				<utu:TabBarItem Command="{Binding GoToSecondTabCommand}" Content="Two" />
+				<utu:TabBarItem Command="{Binding GoToFirstTabCommand}"
+								Content="One" />
+				<utu:TabBarItem Command="{Binding GoToSecondTabCommand}"
+								Content="Two" />
 			</utu:TabBar.Items>
 		</utu:TabBar>
 	</Grid>
