chore: update samples for MVUX generated class

--- a/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
+++ b/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
@@ -5,7 +5,7 @@
 	xmlns:local="using:Counter"
 	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 	<Page.DataContext>
-		<local:BindableMainModel />
+		<local:MainViewModel />
 	</Page.DataContext>
 	<StackPanel VerticalAlignment="Center">
 		<Image
