--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -59,6 +59,13 @@
           </muxc:NavigationViewItem.Icon>
         </muxc:NavigationViewItem>
 
+        <muxc:NavigationViewItem uen:Region.Name="RefreshSignal"
+                                 Content="Refresh ListFeed with Signal">
+          <muxc:NavigationViewItem.Icon>
+            <SymbolIcon Symbol="Page" />
+          </muxc:NavigationViewItem.Icon>
+        </muxc:NavigationViewItem>
+
       </muxc:NavigationView.MenuItems>
 
       <Grid uen:Region.Attached="True"
