--- a/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/MainPage.xaml
@@ -66,6 +66,13 @@
           </muxc:NavigationViewItem.Icon>
         </muxc:NavigationViewItem>
 
+        <muxc:NavigationViewItem uen:Region.Name="State"
+                                 Content="State">
+          <muxc:NavigationViewItem.Icon>
+            <SymbolIcon Symbol="Page" />
+          </muxc:NavigationViewItem.Icon>
+        </muxc:NavigationViewItem>
+
       </muxc:NavigationView.MenuItems>
 
       <Grid uen:Region.Attached="True"
