chore: feed sample

--- a/UI/MVUX/MVUX/MVUX/Presentation/ListFeedSample/ListFeedPage.xaml
+++ b/UI/MVUX/MVUX/MVUX/Presentation/ListFeedSample/ListFeedPage.xaml
@@ -14,9 +14,9 @@
       <DataTemplate>
         <ListView ItemsSource="{Binding Data}">
 
-          <ListView.Header>
+          <ListView.Footer>
             <Button Content="Refresh" Command="{Binding Refresh}" />
-          </ListView.Header>
+          </ListView.Footer>
 
           <ListView.ItemTemplate>
             <DataTemplate>
